fix(theme): update dark mode colors [EE-4188]

--- a/app/portainer/components/datatables/datatable.css
+++ b/app/portainer/components/datatables/datatable.css
@@ -72,8 +72,6 @@
 
 .datatable .searchBar input[type='text'] {
   border: 0px !important;
-  @apply placeholder:text-gray-7;
-  @apply th-dark:placeholder:text-gray-warm-7;
 }
 
 .datatable .searchIcon {
