--- a/app/react/sidebar/Sidebar.module.css
+++ b/app/react/sidebar/Sidebar.module.css
@@ -32,6 +32,7 @@
 
   z-index: 999;
   transition: all 0.4s ease 0s;
+  background-color: var(--bg-sidebar-color);
 }
 
 .root ul {
